# smart_replays

./: .gitignore  README.md  build_script.py  pyproject.toml  smart_replays.py  smart_replays_notification.py
.github/workflows/: ci.yml  release.yml
modular/: clipname_gen.py  exceptions.py  globals.py  hotkeys.py  obs_events_callbacks.py  obs_related.py  obs_script_other.py  other_callbacks.py  properties.py  properties_callbacks.py  save_buffer.py  script_helpers.py  tech.py  ui.py  updates_check.py
