[project]
name = "smart-replays"
version = "2.0.0"
description = "OBS Script for imitating Nvidia ShadowPlay functionality."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.17.0",
    "ruff",
]

[tool.mypy]
plugins = "pydantic.mypy"
python_version = '3.10'
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
pretty = true
exclude = [
    ".venv",
]

[pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "*.egg-info"
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint]
select = [
    "I",
    "N",
    "C4",
    "E",
    "F",
    "T20",
    "RET",
    "COM"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.lint.isort]
section-order = ["local-folder", "standard-library", "third-party", "first-party"]
length-sort = true
lines-between-types = 0
lines-after-imports = 2
split-on-trailing-comma = true
combine-as-imports = true